`Constructor` object is used instead of calling `Class#newInstance` directly